manifests/smoke/smoke-internal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smoke-internal-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "smoke.<internal-dns-name>"
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: asm-tls-secret
  #   hosts:
  #   - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smoke-internal-virtual-service
spec:
  hosts:
  - "smoke.<internal-dns-name>"  
  gateways:
  - smoke-internal-gateway
  http:  
  - match:  
    - uri:
        prefix: /nginx
    rewrite:
      uri: /      
    route:
    - destination:
        host: nginxapp-svc
        port:
          number: 80
  - match:  
    - uri:
        prefix: /apache
    rewrite:
      uri: /      
    route:
    - destination:
        host: apacheapp-svc
        port:
          number: 80
